[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "wasabi-wacm"
dynamic = ["version"]
description = "Client utilities for interacting with Wasabi Account Control Manager APIs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
    { name = "Maurice Kevenaar", email = "maurice@kevenaar.name" },
    { name = "Jonah May", email = "jonah@mayfamily.me" }
]

dependencies = [
  "requests>=2.32.5,<3",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<10",
  "mypy>=2,<3",
  "types-requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/Cenvora/wasabi-wacm"
Repository = "https://github.com/Cenvora/wasabi-wacm"
Documentation = "https://github.com/Cenvora/wasabi-wacm"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"
tag_regex = "^(?:v)?(?P<version>.*)$"

[tool.setuptools.packages.find]
include = ["wasabi_wacm*"]
exclude = ["docs", "media*", "openapi_schemas*"]
